Deps: parent POM 55, wrapper 3.3.4, and modernization (#50)
* Deps: parent POM 55 and others

* modernizer and deprecations

* Fix missed XmlNodeImpl to XmlNode.newInstance() migration

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

* Add SHA-256 checksum for Maven wrapper distribution

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Guillaume Nodet <gnodet@gmail.com>
Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>